# ServiceDesk_plus

./: Dockerfile  README.md  database.db  docker-compose.yml  entrypoint.sh  index.html  main.py  nginx.conf  package-lock.json  package.json  project_models.py  pyproject.toml  tg_bot.py  vite.config.js
src/: App.jsx
src/api/: client.js
src/components/: Footer.jsx  Navbar.jsx  ProtectedRoute.jsx
src/components/ui/: index.jsx
src/context/: AuthContext.jsx
src/pages/: AccountPage.jsx  AddAnswerPage.jsx  AddRequestPage.jsx  AdminMyProblemsPage.jsx  AdminPage.jsx  AdminProblemPage.jsx  AdminStatsPage.jsx  AdminUsersPage.jsx  CheckMessagePage.jsx  HomePage.jsx  LoginPage.jsx  MyRequestsPage.jsx  NotFoundPage.jsx  RegisterPage.jsx  ServiceCompletePage.jsx  ServiceRecordPage.jsx  UnifiedRequestDetailPage.jsx
src/styles/: GlobalStyle.js  theme.js
static/: base.html  index.html  login.html  register.html  style.css
